--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -99,6 +99,7 @@
     <Compile Include="frmLogin.Designer.cs">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="obj\Debug\.NETFramework,Version=v4.8.AssemblyAttributes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\Component\ComboBoxItem.cs" />
@@ -271,6 +272,36 @@
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="obj\Debug\GUI.frmLoading.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.frmLogin.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.frmMain.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.Properties.Resources.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.UI.Modules.ucBaoCaoDoanhThu.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.UI.Modules.ucBaoCaoThuChi.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.UI.Modules.ucBaoCaoTonKho.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.UI.Modules.ucCaiDat.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.UI.Modules.ucCaLamViec.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.UI.Modules.ucChiPhi.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.UI.Modules.ucChiPhiLoai.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.UI.Modules.ucChonGhe.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.UI.Modules.ucChonPhim.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.UI.Modules.ucChonSanPham.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.UI.Modules.ucChonThanhToan.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.UI.Modules.ucChonXacNhanThanhToan.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.UI.Modules.ucDanhGiaDoTuoi.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.UI.Modules.ucHoaDon.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.UI.Modules.ucNhanVien.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.UI.Modules.ucPhanCa.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.UI.Modules.ucPhim.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.UI.Modules.ucPhongChieu.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.UI.Modules.ucSanPham.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.UI.Modules.ucSuatChieu.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.UI.Modules.ucVe.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.UI.ReportDesign.RP_Expense.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.UI.ReportDesign.RP_InventoryDetail.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.UI.ReportDesign.RP_PrintTicket.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.UI.ReportDesign.RP_Sales.resources" />
+    <EmbeddedResource Include="obj\Debug\GUI.UI.ReportDesign.RP_SalesDetails.resources" />
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -361,6 +392,14 @@
       <DependentUpon>RP_SalesDetails.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="App.config" />
+    <None Include="bin\Debug\DAL.dll.config" />
+    <None Include="bin\Debug\GUI.exe.config" />
+    <None Include="obj\Debug\DesignTimeResolveAssemblyReferences.cache" />
+    <None Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
+    <None Include="obj\Debug\GUI.csproj.AssemblyReference.cache" />
+    <None Include="obj\Debug\GUI.csproj.CoreCompileInputs.cache" />
+    <None Include="obj\Debug\GUI.csproj.GenerateResource.cache" />
+    <None Include="obj\Debug\GUI.csproj.Up2Date" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -370,6 +409,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="UI\ReportDesign\tbl_rp_detailed_sales_ui.repx" />
+    <None Include="UI\ReportDesign\tbl_rp_sales_ui.repx" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\add_32x32.png" />
@@ -824,6 +865,99 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\picture_card_no_image.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="bin\Debug\BUS.dll" />
+    <Content Include="bin\Debug\BUS.pdb" />
+    <Content Include="bin\Debug\DAL.dll" />
+    <Content Include="bin\Debug\DAL.pdb" />
+    <Content Include="bin\Debug\DevExpress.BonusSkins.v22.2.dll" />
+    <Content Include="bin\Debug\DevExpress.Charts.v22.2.Core.dll" />
+    <Content Include="bin\Debug\DevExpress.Charts.v22.2.Core.xml" />
+    <Content Include="bin\Debug\DevExpress.CodeParser.v22.2.dll" />
+    <Content Include="bin\Debug\DevExpress.Data.Desktop.v22.2.dll" />
+    <Content Include="bin\Debug\DevExpress.Data.Desktop.v22.2.xml" />
+    <Content Include="bin\Debug\DevExpress.Data.v22.2.dll" />
+    <Content Include="bin\Debug\DevExpress.Data.v22.2.xml" />
+    <Content Include="bin\Debug\DevExpress.DataAccess.v22.2.dll" />
+    <Content Include="bin\Debug\DevExpress.DataAccess.v22.2.UI.dll" />
+    <Content Include="bin\Debug\DevExpress.DataAccess.v22.2.UI.xml" />
+    <Content Include="bin\Debug\DevExpress.DataAccess.v22.2.xml" />
+    <Content Include="bin\Debug\DevExpress.DataVisualization.v22.2.Core.dll" />
+    <Content Include="bin\Debug\DevExpress.Diagram.v22.2.Core.dll" />
+    <Content Include="bin\Debug\DevExpress.Diagram.v22.2.Core.xml" />
+    <Content Include="bin\Debug\DevExpress.Drawing.v22.2.dll" />
+    <Content Include="bin\Debug\DevExpress.Images.v22.2.dll" />
+    <Content Include="bin\Debug\DevExpress.Office.v22.2.Core.dll" />
+    <Content Include="bin\Debug\DevExpress.Office.v22.2.Core.xml" />
+    <Content Include="bin\Debug\DevExpress.Pdf.v22.2.Core.dll" />
+    <Content Include="bin\Debug\DevExpress.Pdf.v22.2.Core.xml" />
+    <Content Include="bin\Debug\DevExpress.Pdf.v22.2.Drawing.dll" />
+    <Content Include="bin\Debug\DevExpress.Pdf.v22.2.Drawing.xml" />
+    <Content Include="bin\Debug\DevExpress.PivotGrid.v22.2.Core.dll" />
+    <Content Include="bin\Debug\DevExpress.PivotGrid.v22.2.Core.xml" />
+    <Content Include="bin\Debug\DevExpress.Printing.v22.2.Core.dll" />
+    <Content Include="bin\Debug\DevExpress.Printing.v22.2.Core.xml" />
+    <Content Include="bin\Debug\DevExpress.RichEdit.v22.2.Core.dll" />
+    <Content Include="bin\Debug\DevExpress.RichEdit.v22.2.Core.xml" />
+    <Content Include="bin\Debug\DevExpress.RichEdit.v22.2.Export.dll" />
+    <Content Include="bin\Debug\DevExpress.Sparkline.v22.2.Core.dll" />
+    <Content Include="bin\Debug\DevExpress.Sparkline.v22.2.Core.xml" />
+    <Content Include="bin\Debug\DevExpress.Utils.v22.2.dll" />
+    <Content Include="bin\Debug\DevExpress.Utils.v22.2.UI.dll" />
+    <Content Include="bin\Debug\DevExpress.Utils.v22.2.UI.xml" />
+    <Content Include="bin\Debug\DevExpress.Utils.v22.2.xml" />
+    <Content Include="bin\Debug\DevExpress.Xpo.v22.2.dll" />
+    <Content Include="bin\Debug\DevExpress.Xpo.v22.2.xml" />
+    <Content Include="bin\Debug\DevExpress.XtraBars.v22.2.dll" />
+    <Content Include="bin\Debug\DevExpress.XtraBars.v22.2.xml" />
+    <Content Include="bin\Debug\DevExpress.XtraCharts.v22.2.dll" />
+    <Content Include="bin\Debug\DevExpress.XtraCharts.v22.2.Extensions.dll" />
+    <Content Include="bin\Debug\DevExpress.XtraCharts.v22.2.Wizard.dll" />
+    <Content Include="bin\Debug\DevExpress.XtraCharts.v22.2.Wizard.xml" />
+    <Content Include="bin\Debug\DevExpress.XtraCharts.v22.2.xml" />
+    <Content Include="bin\Debug\DevExpress.XtraDiagram.v22.2.dll" />
+    <Content Include="bin\Debug\DevExpress.XtraDiagram.v22.2.xml" />
+    <Content Include="bin\Debug\DevExpress.XtraEditors.v22.2.dll" />
+    <Content Include="bin\Debug\DevExpress.XtraEditors.v22.2.xml" />
+    <Content Include="bin\Debug\DevExpress.XtraGauges.v22.2.Core.dll" />
+    <Content Include="bin\Debug\DevExpress.XtraGauges.v22.2.Core.xml" />
+    <Content Include="bin\Debug\DevExpress.XtraGrid.v22.2.dll" />
+    <Content Include="bin\Debug\DevExpress.XtraGrid.v22.2.xml" />
+    <Content Include="bin\Debug\DevExpress.XtraLayout.v22.2.dll" />
+    <Content Include="bin\Debug\DevExpress.XtraLayout.v22.2.xml" />
+    <Content Include="bin\Debug\DevExpress.XtraNavBar.v22.2.dll" />
+    <Content Include="bin\Debug\DevExpress.XtraNavBar.v22.2.xml" />
+    <Content Include="bin\Debug\DevExpress.XtraPivotGrid.v22.2.dll" />
+    <Content Include="bin\Debug\DevExpress.XtraPivotGrid.v22.2.xml" />
+    <Content Include="bin\Debug\DevExpress.XtraPrinting.v22.2.dll" />
+    <Content Include="bin\Debug\DevExpress.XtraPrinting.v22.2.xml" />
+    <Content Include="bin\Debug\DevExpress.XtraReports.v22.2.dll" />
+    <Content Include="bin\Debug\DevExpress.XtraReports.v22.2.Extensions.dll" />
+    <Content Include="bin\Debug\DevExpress.XtraReports.v22.2.Extensions.xml" />
+    <Content Include="bin\Debug\DevExpress.XtraReports.v22.2.xml" />
+    <Content Include="bin\Debug\DevExpress.XtraRichEdit.v22.2.dll" />
+    <Content Include="bin\Debug\DevExpress.XtraRichEdit.v22.2.xml" />
+    <Content Include="bin\Debug\DevExpress.XtraTreeList.v22.2.dll" />
+    <Content Include="bin\Debug\DevExpress.XtraTreeList.v22.2.xml" />
+    <Content Include="bin\Debug\DevExpress.XtraVerticalGrid.v22.2.dll" />
+    <Content Include="bin\Debug\DevExpress.XtraVerticalGrid.v22.2.xml" />
+    <Content Include="bin\Debug\DTO.dll" />
+    <Content Include="bin\Debug\DTO.pdb" />
+    <Content Include="bin\Debug\GUI.exe" />
+    <Content Include="bin\Debug\GUI.pdb" />
+    <Content Include="bin\Debug\Images\angularExpert.png" />
+    <Content Include="bin\Debug\Images\anhthu.jpg" />
+    <Content Include="bin\Debug\Images\Ảnh chụp màn hình 2022-08-19 200552.png" />
+    <Content Include="Images\Screenshot 2024-11-13 190805.png" />
+    <Content Include="obj\Debug\GUI.csproj.FileListAbsolute.txt" />
+    <Content Include="obj\Debug\GUI.exe" />
+    <Content Include="obj\Debug\gui.exe.licenses" />
+    <Content Include="obj\Debug\GUI.pdb" />
+    <Content Include="obj\Debug\TempPE\Properties.Resources.Designer.cs.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="bin\Release\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
