cập nhật báo cáo

--- a/GUI/App.config
+++ b/GUI/App.config
@@ -19,7 +19,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
   <connectionStrings>
-    <add name="CM_Cinema_DB" connectionString="Data Source=.\sqlexpress;Initial Catalog=CM_Cinema_DB;Integrated Security=True;Encrypt=False"
+    <add name="CM_Cinema_DB" connectionString="Data Source=.;Initial Catalog=CM_Cinema_DB;Integrated Security=True;Encrypt=False"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
