update to match DB

--- a/DAL/app.config
+++ b/DAL/app.config
@@ -24,5 +24,8 @@
         <add name="DAL.Properties.Settings.CM_Cinema_DBConnectionString6"
             connectionString="Data Source=.;Initial Catalog=CM_Cinema_DB;Integrated Security=True;Encrypt=False"
             providerName="System.Data.SqlClient" />
+        <add name="DAL.Properties.Settings.CM_Cinema_DBConnectionString7"
+            connectionString="Data Source=HOSHIKISHIRO\SQLEXPRESS;Initial Catalog=CM_Cinema_DB;Integrated Security=True;Encrypt=False;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
