--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -64,6 +64,7 @@
     <Compile Include="tbl_DTO\tbl_DM_Movie_DTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="tbl_DTO\tbl_DM_Product_DTO.cs" />
+    <Compile Include="tbl_DTO\TicketItem_DTO.cs" />
     <Compile Include="Utility\CUtility.cs" />
   </ItemGroup>
   <ItemGroup />
