--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -55,6 +55,7 @@
       <DependentUpon>CM_Cinema_DB.dbml</DependentUpon>
     </Compile>
     <Compile Include="tbl_DAL\InventorySettings.cs" />
+    <Compile Include="tbl_DM_BillDetail_DAL.cs" />
     <Compile Include="tbl_DM_Bill_DAL.cs" />
     <Compile Include="tbl_DM_ExpenseType_DAL.cs" />
     <Compile Include="tbl_DM_MovieSchedule_DAL.cs" />
