--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -390,6 +390,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Modules\ucChonThanhToan.resx">
       <DependentUpon>ucChonThanhToan.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Modules\ucVe.resx">
       <DependentUpon>ucVe.cs</DependentUpon>
