--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -965,7 +965,20 @@
     <Content Include="bin\Debug\Images\angularExpert.png" />
     <Content Include="bin\Debug\Images\anhthu.jpg" />
     <Content Include="bin\Debug\Images\Ảnh chụp màn hình 2022-08-19 200552.png" />
+    <Content Include="Images\Apple Juice.png" />
+    <Content Include="Images\Candy.png" />
+    <Content Include="Images\Chocolate Bar.png" />
+    <Content Include="Images\coca.png" />
+    <Content Include="Images\fanta.png" />
+    <Content Include="Images\HellBoy.png" />
+    <Content Include="Images\Mineral Water.png" />
+    <Content Include="Images\Orange Juice.png" />
+    <Content Include="Images\popcorn.png" />
+    <Content Include="Images\PotatoChips.png" />
     <Content Include="Images\Screenshot 2024-11-13 190805.png" />
+    <Content Include="Images\sieubao.png" />
+    <Content Include="Images\Sprite.png" />
+    <Content Include="Images\treconkhongngoc3.png" />
     <Content Include="obj\Debug\GUI.csproj.FileListAbsolute.txt" />
     <Content Include="obj\Debug\GUI.exe" />
     <Content Include="obj\Debug\gui.exe.licenses" />
