--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -99,6 +99,12 @@
     <Compile Include="frmLogin.Designer.cs">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmNhap_SL.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmNhap_SL.Designer.cs">
+      <DependentUpon>frmNhap_SL.cs</DependentUpon>
+    </Compile>
     <Compile Include="obj\Debug\.NETFramework,Version=v4.8.AssemblyAttributes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -289,6 +295,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmNhap_SL.resx">
+      <DependentUpon>frmNhap_SL.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="obj\Debug\GUI.frmLoading.resources" />
     <EmbeddedResource Include="obj\Debug\GUI.frmLogin.resources" />
