--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -114,8 +114,11 @@
     <Compile Include="obj\Debug\.NETFramework,Version=v4.8.AssemblyAttributes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\Component\BarManagerLayoutCustom.cs" />
     <Compile Include="UI\Component\ComboBoxItem.cs" />
     <Compile Include="UI\Component\ExpenseStatus.cs" />
+    <Compile Include="UI\Component\GridViewLayoutCustom.cs" />
+    <Compile Include="UI\Component\LayoutControlCustom.cs" />
     <Compile Include="UI\Modules\ucBaoCaoDoanhThu.cs">
       <SubType>UserControl</SubType>
     </Compile>
