Cập nhật khoảng trống phía dưới các màn hình chọn ghế, chọn phim, chọn thanh toán.

--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -305,6 +305,9 @@
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmMain.vi.resx">
+      <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmNhap_SL.resx">
       <DependentUpon>frmNhap_SL.cs</DependentUpon>
     </EmbeddedResource>
