--- a/DAL/app.config
+++ b/DAL/app.config
@@ -30,5 +30,8 @@
         <add name="DAL.Properties.Settings.CM_Cinema_DBConnectionString8"
             connectionString="Data Source=.;Initial Catalog=CM_Cinema_DB;Integrated Security=True;Encrypt=False;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
+        <add name="DAL.Properties.Settings.CM_Cinema_DBConnectionString9"
+            connectionString="Data Source=.\sqlexpress;Initial Catalog=CM_Cinema_DB;Integrated Security=True;Encrypt=False"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
